fixed combobox, implemented on add jumper form

--- a/src/app/components/form/form.component.scss
+++ b/src/app/components/form/form.component.scss
@@ -28,7 +28,7 @@
     flex-wrap: wrap;
   }
   .datum {
-    min-height: 21px;
+    min-height: 25px;
     margin: 20px 0px;
     width: calc(100% - 40px);
     display: flex;
