--- a/src/app/routes/incidents/new-incident/new-incident.component.scss
+++ b/src/app/routes/incidents/new-incident/new-incident.component.scss
@@ -60,7 +60,7 @@
     }
   }
   .datum {
-    min-height: 21px;
+    min-height: 25px;
     margin: 20px 0px;
     width: calc(100% - 40px);
     display: flex;
